# task_manager_bot

./: .gitignore  README.md  docker-compose.yaml
bot/: Dockerfile  config.py  handlers.py  main.py  models.py  requirements.txt
services/notification_service/: celery_tasks.py  config.py  main.py  requirements.txt
services/task_service/: Dockerfile  pyproject.toml
services/task_service/app/: config.py  database.py  main.py  models.py  routes.py
